<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EnterCodeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/enter_code_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_code_number_96"
        android:layout_marginTop="@dimen/vertical_margin_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/cd_code_image" />
    <TextView
        android:id="@+id/enter_code_text"
        android:text="@string/enter_code_text"
        app:layout_constraintTop_toBottomOf="@id/enter_code_context"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/title" />
    <TextView
        android:id="@+id/enter_code_context"
        android:text="@string/enter_code_context"
        app:layout_constraintTop_toBottomOf="@id/enter_code_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/SettingsContext" />

    <EditText
        android:id="@+id/enter_code_number_input"
        android:maxLength="6"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/enter_code_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/edit_text"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>